<resources>
    <string name="app_name">Whatsapp Clone</string>
    <string name="lbl_email">Digite seu e-mail</string>
    <string name="lb_senha">Digite sua senha</string>
    <string name="texto_nao_tem_conta">Ainda não tem conta? Cadastre-se!</string>
    <string name="lb_nome">Digite seu nome</string>
    <string name="lb_confirmar_senha">Confirme sua senha</string>
    <string name="botao_cadastrar">Cadastrar</string>
    <string name="texto_ja_tem_conta">Já possui conta? Faça login!</string>
    <string name="item_configuracao">Configurações</string>
    <string name="item_sair">Sair</string>
    <string name="item_pesquisa">Pesquisa</string>
    <string name="item_add">Add</string>
</resources>
